examples/examples/counters_static/snapshots/counters_static__tests____test_counters-2.snap
---
source: examples/examples/counters_static/tests.rs
expression: harness.terminal().backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 20, height: 20 },
    content: [
        "┌──────────────────┐",
        "│count: 1          │",
        "└──────────────────┘",
        "                    ",
        " count: 0           ",
        "                    ",
        "                    ",
        " count: 0           ",
        "                    ",
        "                    ",
        " count: 0           ",
        "                    ",
        "                    ",
        " count: 0           ",
        "                    ",
        "                    ",
        "                    ",
        "                    ",
        "                    ",
        "                    ",
    ],
    styles: [
        x: 0, y: 0, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
