examples/examples/counters_static/snapshots/counters_static__tests____test_counters.snap
---
source: examples/examples/counters_static/./tests.rs
expression: harness.terminal().backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 20, height: 20 },
    content: [
        "                    ",
        " count: 0           ",
        "                    ",
        "                    ",
        " count: 0           ",
        "                    ",
        "                    ",
        " count: 0           ",
        "                    ",
        "                    ",
        " count: 0           ",
        "                    ",
        "                    ",
        " count: 0           ",
        "                    ",
        "                    ",
        "                    ",
        "                    ",
        "                    ",
        "                    ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
